--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,8 +52,12 @@
         android:layout_height="wrap_content"
         android:text="폰번 입력하러 가기"/>
 
-
-
+    <Button
+        android:id="@+id/phoneDialBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="전화 다이얼 화면"/>
 
 
 </LinearLayout>
