--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,13 @@
         android:layout_marginTop="10dp"
         android:text="문자 화면 이동"/>
 
+    <Button
+        android:id="@+id/webLinkBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="네이버로 이동"/>
+
 
 
 
