--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,14 @@
         android:text="카카오톡 앱 다운화면 이동"/>
 
 
+    <Button
+        android:id="@+id/googleMapBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="구글 지도 보여주기"/>
+
+
 
 
 
